@@ -68,7 +68,7 @@
 
 /* Define socklen_t if it's not available in sys/socket.h. */
 #ifndef HAVE_SOCKLEN_T
-typedef socklen_t int;
+typedef int socklen_t;
 #endif
 
 /*
