@@ -93,6 +93,8 @@ main(void)
     serv = getservbyname("biff", "udp");
     if (serv == NULL)
         skip("biff service not found");
+    else if (strcmp(service, "comsat") == 0)
+        is_string("comsat", service, "...and found comsat");
     else
         is_string("biff", service, "...and found biff");
     status = test_getnameinfo(sa, sizeof(sin), node, sizeof(node), NULL, 0,
